--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "keywords": [
     "ecosystem:cordova"
@@ -21,5 +21,8 @@
       "browser",
       "android"
     ]
+  },
+  "dependencies": {
+    "nodemon": "^2.0.15"
   }
 }
